# SkillBox_ShopApp

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
mysite/mysite/: settings.py  urls.py  views.py
mysite/mysite/templates/mysite/: startpage.html
